---------------

4.3.6 ():
	Fix crashes with fuzzed files (reported by Lionel Debroux):
	- add sanity check to GDM loader
	- add sanity check to MDL pattern loader
	- add sanity check to RAD pattern loader
	- add sanity check to MGT pattern loader
	- add sanity check to AMD number of patterns
	- add sanity check to STX number of patterns
	- add sanity check to MMD1/3 number of channels
	Other changes:
	- fix instrument number in channel initialization
	- fix sample size limit (reported by Jochen Goernitz)
	- fix loading of OpenMPT 1.17 IT modules (reported by Dane Bush)

4.3.5 (20150207):
	Fix crashes with fuzzed files (reported by Lionel Debroux):
	- add sanity check for ST3 S3M maximum sample size
	- add sanity check for sample loop start
	- add sanity check for speed 0
	- add sanity check for invalid XM effects
	- add sanity check for maximum number of channels
	- add sanity check for number of points in IT envelope
	- add sanity check for S3M file format information
	- add sanity check for maximum sample size
	- add sanity check for invalid envelope points
	- add sanity check for basic module parameters
	- add sanity check for instrument release after load error
	- add sanity check for XM header size
	- add sanity check for XM/IT/S3M/MTM/RTM parameters and sample size
	- add sanity checks to inflate and lha decompressors
	- add more tests to 669 and NO file detection
	- fix mixer index overflow with large samples
	- fix prowizard data request response
	- fix EU/NP1/NP2/NP3 prowizard depackers
	- fix crash on attempt to play invalid sample
	- fix infinite loop in break+delay quirk
	- reset module data before loading module
	Other changes:
	- fix loop processing error in scan (reported by Lionel Debroux)
	- fix minimum BPM value for MED (reported by cspiegel)
	- fix sample loop adjustment (by Emmanuel Julien)

4.3.4 (20150111):
	Fix bugs caught in the OpenMPT test cases:
	- fix XM keyoff+delay combinations
	- fix XM fine pitch slide with pattern delay